z-index fixed on search

--- a/src/scss/pages/_global.scss
+++ b/src/scss/pages/_global.scss
@@ -205,7 +205,7 @@ h5{
 }
 
 .main {
-  z-index: 2;
+  z-index: 1;
   padding-left: 29px;
   padding-top: 29px;
   padding-bottom: 100px;
